nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx
