service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: test-app
